--- a/dnn/Examples/ShortestVisibilityPath/ShortestVisibilityPath.vcxproj.filters
+++ b/dnn/Examples/ShortestVisibilityPath/ShortestVisibilityPath.vcxproj.filters
@@ -1,99 +1,162 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="리소스 파일">
+      <UniqueIdentifier>{c6e6678e-fe44-47ce-8a8f-f72f62c91664}</UniqueIdentifier>
+    </Filter>
     <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+      <UniqueIdentifier>{5e8292b8-0511-475a-9edd-b69f0b530efc}</UniqueIdentifier>
     </Filter>
     <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+      <UniqueIdentifier>{c7cfcc3f-2652-4420-9f7a-9680f9f2cdb8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Util">
+      <UniqueIdentifier>{d475a965-5892-47ba-9e2a-e8fa2ab57033}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\Chain.h">
+    <ClCompile Include="pch.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="AddDialog.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Object.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="OGL_Contorl.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ShortestVisibilityPath.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ShortestVisibilityPath_DS.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ShortestVisibilityPathDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Util\SVP.cpp">
+      <Filter>Util</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="framework.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\common_tangent.h">
+    <ClInclude Include="pch.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\DataT.h">
+    <ClInclude Include="resource.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\DebugPrint.h">
+    <ClInclude Include="targetver.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\Edge.h">
+    <ClInclude Include="AddDialog.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\event_computation.h">
+    <ClInclude Include="Object.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\Hourglass.h">
+    <ClInclude Include="OGL_Contorl.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\hourglass_operation.h">
+    <ClInclude Include="Util\Chain.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\common_tangent.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\DataT.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\DebugPrint.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\Edge.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\Hourglass.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\hourglass_operation.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\NODE.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\Point.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\PointS.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\polygon_decomposition.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\polygon_operation.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\print.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\SNode.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\tangent.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\TNODE.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\Tree.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\VertexID.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="ShortestVisibilityPath.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\LINE.h">
+    <ClInclude Include="ShortestVisibilityPath_DS.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\LOS.h">
+    <ClInclude Include="ShortestVisibilityPathDlg.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\NODE.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="Util\event_computation.h">
+      <Filter>Util</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\Point.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="Util\LOS.h">
+      <Filter>Util</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\PointS.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="Util\ShortestPathTree.h">
+      <Filter>Util</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\polygon_decomposition.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="Util\SPTnode.h">
+      <Filter>Util</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\polygon_operation.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="Util\storage.h">
+      <Filter>Util</Filter>
     </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\print.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\ShortestPathTree.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\SNode.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\SPTnode.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\storage.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\tangent.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\TNODE.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\Tree.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Examples\ShortestVisibilityPath\VertexID.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="Util\SVP.h">
+      <Filter>Util</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Examples\ShortestVisibilityPath\LINE.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Examples\ShortestVisibilityPath\main.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
+    <ResourceCompile Include="ShortestVisibilityPath.rc">
+      <Filter>리소스 파일</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\ShortestVisibilityPath.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\ShortestVisibilityPath.rc2">
+      <Filter>리소스 파일</Filter>
+    </None>
   </ItemGroup>
 </Project>
